@@ -1,6 +1,6 @@
 html
 {
-	heigth:100%;
+	height:100%;
 }
 
 .groupItem
@@ -8,7 +8,7 @@ html
 	background-color:#FBFBFB;
 	border:1px solid #CCCCCC;
 	display:block;
-	line-height:75px
+	line-height:75px;
 	cursor: move;
 	margin: 0 0 10px;
 	width: 390px;
@@ -29,8 +29,10 @@ html
 
 .groupItem .item_top a
 {
+	float:right;
 	text-decoration: none;
 	color: white;
+	border-bottom: 2px solid #003333;
 }
 
 .innerhandle {
